--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image_nature_top.jpeg
+    - assets/image_profile.jpeg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
